src/objects/Apttus_DealMgr__DealGuidanceDimensionSet__c.object
<CustomObject>
    <description>Represents a set of dimensions shared by rules.</description>
    <fields>
        <fullName>APTS_Ext_ID__c</fullName>
        <externalId>true</externalId>
        <label>APTS Ext ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__BusinessObject__c</fullName>
        <description>The business object which provides the context for the dimensions in the set</description>
        <inlineHelpText>The business object which provides the context for the dimensions in the set</inlineHelpText>
        <label>Business Object</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus_DealMgr__GuidanceType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Apttus__APTS_Agreement__c</fullName>
                </value>
                <value>
                    <fullName>Apttus__AgreementLineItem__c</fullName>
                </value>
                <value>
                    <fullName>Apttus_DealMgr__Deal__c</fullName>
                </value>
                <value>
                    <fullName>Apttus_DealMgr__DealLineItem__c</fullName>
                </value>
                <value>
                    <fullName>Apttus_Config2__LineItem__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__Description__c</fullName>
        <description>The description for the dimension set</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__GuidanceType__c</fullName>
        <description>The guidance type associated with the dimensions. This determines the types of dimensions that may be included in the set.</description>
        <inlineHelpText>The guidance type associated with the dimensions. This determines the types of dimensions that may be included in the set.</inlineHelpText>
        <label>Guidance Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deal Level</fullName>
                </value>
                <value>
                    <fullName>Line Level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Deal Guidance Dimension Set</label>
    <listViews>
        <fullName>Apttus_DealMgr__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deal Guidance Dimension Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>